--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,11 @@
                     <label class="name"><span class="badge badge-danger">1</span>踊りたくなる音楽が好き?</label>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_1" value="0" required>
-                        <label for="q1_1" class="form-check-label">そう思う</label>
+                        <label for="q1_1" class="form-check-label">とても好き</label>
                     </div>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_2" value="1">
-                        <label for="q1_2" class="form-check-label">ややそう思う</label>
+                        <label for="q1_2" class="form-check-label">やや好き</label>
                     </div>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_3" value="2">
@@ -54,11 +54,11 @@
                     </div>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_4" value="3">
-                        <label for="q1_4" class="form-check-label">あまりそう思わない</label>
+                        <label for="q1_4" class="form-check-label">やや嫌い</label>
                     </div>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_5" value="4">
-                        <label for="q1_5" class="form-check-label">そう思わない</label>
+                        <label for="q1_5" class="form-check-label">嫌い</label>
                     </div>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q1" id="q1_6" value="5">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="name"><span class="badge badge-danger">3</span>エネルギッシュさ?</label>
+                    <label class="name"><span class="badge badge-danger">3</span>エネルギッシュさはどのくらいが好き?</label>
                     <div class="form-check">
                         <input type="radio" class="form-check-input" name="q3" id="q3_1" value="0" required>
                         <label for="q3_1" class="form-check-label">強め</label>
